Creating DefaultPawn blueprint.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/First_Map.First_Map
 GameDefaultMap=/Game/First_Map.First_Map
+GlobalDefaultGameMode=/Game/BuildingEscapeGameMode.BuildingEscapeGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
